# magpieCTF-2025

./: .gitignore  README.md  readme.md  readme.template.md  reauthor.sh  template.md
cloud/: readme.md
cloud/James-Jeremy-Challenge/: README.md
cloud/slow-slow-quick-quick-slow/: docker-compose.yml
crypto/: readme.md
crypto/ShadowCrackerEasy/: README.md  shadow_output.txt  shadowgen.py  users.txt
crypto/all-ends-same/: README.md  ciphertext.txt  private_key.pem  public_key.pem
crypto/grey-area/: README.md
crypto/imp3rf3ct/: README.md
crypto/inverse-converse/: README.md  output.txt
crypto/numbers-to-fight/: README.md
crypto/resolve-in-harmony/: README.md  ciphertext.txt  generate_cipher.py  public_key.pem
crypto/rsa-precursor1/: README.md  output.txt
crypto/rsa-precursor3/: README.md  ciphertext.txt  generate_cipher.py  private_key.pem  public_key.pem
crypto/rsa2/: README.md
crypto/rsa3/: README.md  server.py
cryptography/rsa-precursor1/: README.md
cryptography/rsa1/: README.md
cryptography/rsa2/: README.md  output.txt  solve.sage.py  source.py
forensics/: README.md  readme.md
forensics/CatPicForensicsEasy/: README.md
jupyter/: docker-compose.yml
misc/: readme.md
osint/: readme.md
pwn/: .clang-format  .gitignore  base.Dockerfile  base.Makefile  base.mk  common.c  common.h  docker-compose.yml  pwn  readme.md  regenerate.sh
pwn/stack2/: chal.c  (+5 more)
rev/: README.md  readme.md
rev/SMalwareTP/: CMakeLists.txt  README.md  main.c  makefile  notavirus
shifted_bytes/: challenge.c  not_full_solve.py
web/: docker-compose.yml  readme.md
(+366 files in other folders)
